add a date to the table under name

--- a/src/index.css
+++ b/src/index.css
@@ -347,7 +347,9 @@ body {
   padding: 12px 15px;
   text-align: center;
 }
-
+.contacts-table small{
+  display: block;
+}
 .contacts-table th {
   background-color: #f2f2f2;
 }
