--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   padding: 0;
   margin: 0;
 }
@@ -24,7 +24,7 @@ body {
   font-size: 1.5rem;
   font-weight: 100;
 }
-.header-logo a{
+.header-logo a {
   text-decoration: none;
   color: #333;
 }
@@ -186,7 +186,7 @@ body {
   .hero-content p {
     font-size: 1rem;
   }
-  .hero-content img{
+  .hero-content img {
     display: none;
   }
   .btn-primary {
@@ -222,9 +222,17 @@ body {
   margin-bottom: 1rem;
 }
 
+/* .add-contact-form {
+  display: flex;
+  flex-wrap: wrap;
+} */
 .add-contact-form {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+  flex: 1;
+  align-items: center;
 }
 
 .form-group {
@@ -276,12 +284,12 @@ body {
 }
 
 .contact-image img {
-  width: 50px;
-  height: 50px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
   margin-right: 1rem;
 }
-.fixed-column img{
+.fixed-column img {
   height: 80px;
   width: 80px;
 }
@@ -332,7 +340,8 @@ body {
 }
 
 .contacts-container {
-  margin: 1rem auto;
+  margin: 0; 
+  padding: 0;
 }
 
 .contacts-table {
@@ -347,8 +356,9 @@ body {
   padding: 12px 15px;
   text-align: center;
 }
-.contacts-table small{
+.contacts-table small {
   display: block;
+  color: #333;
 }
 .contacts-table th {
   background-color: #f2f2f2;
