--- a/src/index.css
+++ b/src/index.css
@@ -354,7 +354,7 @@ body {
 .contacts-table th,
 .contacts-table td {
   padding: 12px 15px;
-  text-align: center;
+  text-align: left;
 }
 .contacts-table small {
   display: block;
